Fix actionbutton not showing image
.action-abrir_gaveta changed to .action-abrirGaveta

--- a/src/css/commandBar/actionsThumbnails.less
+++ b/src/css/commandBar/actionsThumbnails.less
@@ -143,11 +143,11 @@
   background-image: @medir_saturacao_02;
 }
 
-.action-abrir_gaveta {
+.action-abrirGaveta {
   background-image: @gaveta;
 }
 
-.action-fechar_gaveta {
+.action-fecharGaveta {
   background-image: @gaveta;
 }
 
